--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
 	"name":"autocompletelikegoogle",
-	"version":"1.0.7",
+	"version":"1.0.8",
 	"main": [
 		"jquery.autocomplete.js",
 		"jquery.autocomplete.css"
@@ -21,6 +21,7 @@
 		"form",
 		"ui",
 		"input",
+		"accents",
 		"jquery"
     ],
 	"dependencies": {
