New version 1.2.7. Read more https://github.com/xdan/autocomplete/releases/tag/1.2.7

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "jquery-autocomplete",
-  "version": "1.2.6",
+  "version": "1.2.7",
   "description": "Simple autocomplete like Google",
   "main": "jquery.autocomplete.js",
   "scripts": {
+    "newversion": "npm version patch --no-git-tag-version && npm run newversiongit && npm publish ./",
+    "newversiongit": "git add --all  && git commit -m \"New version %npm_package_version%. Read more https://github.com/xdan/autocomplete/releases/tag/%npm_package_version% \" && git tag %npm_package_version% && git push --tags origin HEAD:master",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
